// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Adapter should transform a stage array to a dashboard schema 1`] = `
Object {
  "teams": Array [
    Card {
      "count": 0,
      "label": "MOCK_TEAM",
      "tags": Object {
        "allocated": 0,
        "overdue": 0,
      },
      "type": "team",
      "value": 1,
    },
    Card {
      "count": 2,
      "label": "MOCK_TEAM",
      "tags": Object {
        "allocated": 1,
        "overdue": 1,
      },
      "type": "team",
      "value": 2,
    },
    Card {
      "count": 0,
      "label": "MOCK_TEAM",
      "tags": Object {
        "allocated": 0,
        "overdue": 0,
      },
      "type": "team",
      "value": 3,
    },
  ],
  "user": Array [
    Card {
      "count": 1,
      "label": "Cases",
      "tags": Object {
        "allocated": 0,
        "overdue": 1,
      },
      "type": undefined,
      "value": undefined,
    },
  ],
}
`;

exports[`Dashboard Adapter should transform a stage array to a dashboard schema when deadlines are disabled 1`] = `
Object {
  "teams": Array [
    Card {
      "count": 0,
      "label": "MOCK_TEAM",
      "tags": Object {
        "allocated": 0,
        "overdue": 0,
      },
      "type": "team",
      "value": 1,
    },
    Card {
      "count": 2,
      "label": "MOCK_TEAM",
      "tags": Object {
        "allocated": 1,
        "overdue": 0,
      },
      "type": "team",
      "value": 2,
    },
    Card {
      "count": 0,
      "label": "MOCK_TEAM",
      "tags": Object {
        "allocated": 0,
        "overdue": 0,
      },
      "type": "team",
      "value": 3,
    },
  ],
  "user": Array [
    Card {
      "count": 1,
      "label": "Cases",
      "tags": Object {
        "allocated": 0,
        "overdue": 0,
      },
      "type": undefined,
      "value": undefined,
    },
  ],
}
`;

exports[`Team Workstack Adapter should hide unworkable 1`] = `
Object {
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "dashboard": Array [
    Card {
      "count": 3,
      "label": "MOCK_CASETYPE",
      "tags": Object {
        "allocated": 1,
        "overdue": 1,
      },
      "type": "workflow",
      "value": "DEFAULT",
    },
    Card {
      "count": 3,
      "label": "MOCK_CASETYPE",
      "tags": Object {
        "allocated": 1,
        "overdue": 1,
      },
      "type": "workflow",
      "value": "WCS",
    },
  ],
  "items": Array [
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234567/19",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "2020-12-31",
      "deadlineDisplay": "31/12/2020",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234567/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 1,
    },
    Object {
      "active": false,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234567/19",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "2020-12-31",
      "deadlineDisplay": "31/12/2020",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234567/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "Closed",
      "stageTypeWithDueDateDisplay": "Closed",
      "teamUUID": 2,
      "userUUID": 1,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "caseReference": "A/1234568/19",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "1900-01-02",
      "deadlineDisplay": "02/01/1900",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "1900-01-04",
      "deadlineDisplay": "04/01/1900",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    Object {
      "active": false,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "06-01-2200",
      "deadlineDisplay": null,
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "Closed",
      "stageTypeWithDueDateDisplay": "Closed",
      "teamUUID": 2,
      "userUUID": 1,
    },
  ],
  "label": "MOCK_TEAM",
  "teamMembers": Array [],
}
`;

exports[`Team Workstack Adapter should transform a stage array to a team workstack schema 1`] = `
Object {
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "dashboard": Array [
    Card {
      "count": 4,
      "label": "MOCK_CASETYPE",
      "tags": Object {
        "allocated": 1,
        "overdue": 2,
      },
      "type": "workflow",
      "value": "DEFAULT",
    },
    Card {
      "count": 4,
      "label": "MOCK_CASETYPE",
      "tags": Object {
        "allocated": 2,
        "overdue": 2,
      },
      "type": "workflow",
      "value": "WCS",
    },
  ],
  "items": Array [
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234567/19",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "1900-01-01",
      "deadlineDisplay": "01/01/1900",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234567/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 1,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234567/19",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "2020-12-31",
      "deadlineDisplay": "31/12/2020",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234567/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 1,
    },
    Object {
      "active": false,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234567/19",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "2020-12-31",
      "deadlineDisplay": "31/12/2020",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234567/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "Closed",
      "stageTypeWithDueDateDisplay": "Closed",
      "teamUUID": 2,
      "userUUID": 1,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "caseReference": "A/1234568/19",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "1900-01-02",
      "deadlineDisplay": "02/01/1900",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "1900-01-04",
      "deadlineDisplay": "04/01/1900",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    Object {
      "active": false,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "06-01-2200",
      "deadlineDisplay": null,
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "Closed",
      "stageTypeWithDueDateDisplay": "Closed",
      "teamUUID": 2,
      "userUUID": 1,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234570/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "1900-01-05",
      "deadlineDisplay": "05/01/1900",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234570/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
  ],
  "label": "MOCK_TEAM",
  "teamMembers": Array [],
}
`;

exports[`Team Workstack Adapter should transform a stage array to a team workstack schema ordered by systemCalculatedPriority 1`] = `
Object {
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "dashboard": Array [
    Card {
      "count": 4,
      "label": "MOCK_CASETYPE",
      "tags": Object {
        "allocated": 2,
        "overdue": 2,
      },
      "type": "workflow",
      "value": "WCS",
    },
    Card {
      "count": 1,
      "label": "MOCK_CASETYPE",
      "tags": Object {
        "allocated": 1,
        "overdue": 1,
      },
      "type": "workflow",
      "value": "DEFAULT",
    },
  ],
  "items": Array [
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {
        "systemCalculatedPriority": 97,
      },
      "deadline": "1900-01-04",
      "deadlineDisplay": "04/01/1900",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    Object {
      "active": false,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {
        "systemCalculatedPriority": 56.3,
      },
      "deadline": "06-01-2200",
      "deadlineDisplay": null,
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "Closed",
      "stageTypeWithDueDateDisplay": "Closed",
      "teamUUID": 2,
      "userUUID": 1,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234570/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {
        "systemCalculatedPriority": 43.9,
      },
      "deadline": "1900-01-05",
      "deadlineDisplay": "05/01/1900",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234570/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "caseReference": "A/1234568/19",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {
        "systemCalculatedPriority": 35,
      },
      "deadline": "1900-01-02",
      "deadlineDisplay": "02/01/1900",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {
        "systemCalculatedPriority": 13.43,
      },
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_TEAM",
  "teamMembers": Array [],
}
`;

exports[`User Workstack Adapter should hide unworkable 1`] = `
Object {
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "items": Array [],
  "label": "My Cases",
}
`;

exports[`User Workstack Adapter should transform a stage array to a user workstack schema 1`] = `
Object {
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "items": Array [
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "assignedUserDisplay": "MOCK_USER",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "deadline": "2200-01-01",
      "deadlineDisplay": "01/01/2200",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": undefined,
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 1,
      "userUUID": 1,
    },
  ],
  "label": "My Cases",
}
`;

exports[`Workflow Workstack Adapter should add the case ref and primary correspondent to primaryCorrespondentAndRefDisplay 1`] = `
Object {
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "items": Array [
    Object {
      "active": true,
      "applicantOrConstituentCorrespondentDisplay": "",
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "correspondents": Object {
        "correspondents": Array [
          Object {
            "fullname": "testName",
            "is_primary": "true",
            "uuid": "uuid123",
          },
        ],
      },
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "memberCorrespondentDisplay": "",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondent": Object {
        "fullname": "testName",
        "is_primary": "true",
        "uuid": "uuid123",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
        "primaryCorrespondentFullName": "testName",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": Array [],
}
`;

exports[`Workflow Workstack Adapter should add the fullname and postcode of primaryCorrespondent to primaryCorrespondent 1`] = `
Object {
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "items": Array [
    Object {
      "active": true,
      "applicantOrConstituentCorrespondentDisplay": "",
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "COMP/1234568/19",
      "caseType": "COMP",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "correspondents": Object {
        "correspondents": Array [
          Object {
            "fullname": "testName",
            "is_primary": "false",
            "postcode": "postcode1",
            "uuid": "uuid123",
          },
          Object {
            "fullname": "primaryC",
            "is_primary": "true",
            "postcode": "postcode2",
            "uuid": "uuid456",
          },
        ],
      },
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "memberCorrespondentDisplay": "",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondent": Object {
        "fullname": "primaryC",
        "is_primary": "true",
        "postcode": "postcode2",
        "uuid": "uuid456",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "COMP/1234568/19",
        "primaryCorrespondentFullName": "primaryC",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": Array [],
}
`;

exports[`Workflow Workstack Adapter should hide unworkable 1`] = `
Object {
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "dashboard": Array [
    Card {
      "count": 3,
      "label": "MOCK_STAGETYPE",
      "tags": Object {
        "allocated": 2,
        "overdue": 2,
      },
      "type": "stage",
      "value": "A",
    },
    Card {
      "count": 1,
      "label": "MOCK_STAGETYPE",
      "tags": Object {
        "allocated": 1,
        "overdue": 1,
      },
      "type": "stage",
      "value": "B",
    },
  ],
  "items": Array [
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "1900-01-04",
      "deadlineDisplay": "04/01/1900",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "2200-01-06",
      "deadlineDisplay": "06/01/2200",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 1,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "1900-01-07",
      "deadlineDisplay": "07/01/1900",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234569/19",
      },
      "stageType": "B",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234570/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "1900-01-05",
      "deadlineDisplay": "05/01/1900",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234570/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
  ],
  "label": "MOCK_CASETYPE",
  "teamMembers": Array [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack schema 1`] = `
Object {
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "dashboard": Array [
    Card {
      "count": 4,
      "label": "MOCK_STAGETYPE",
      "tags": Object {
        "allocated": 2,
        "overdue": 2,
      },
      "type": "stage",
      "value": "A",
    },
    Card {
      "count": 1,
      "label": "MOCK_STAGETYPE",
      "tags": Object {
        "allocated": 1,
        "overdue": 1,
      },
      "type": "stage",
      "value": "B",
    },
  ],
  "items": Array [
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "1900-01-04",
      "deadlineDisplay": "04/01/1900",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "2200-01-06",
      "deadlineDisplay": "06/01/2200",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 1,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "1900-01-07",
      "deadlineDisplay": "07/01/1900",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234569/19",
      },
      "stageType": "B",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234570/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "1900-01-05",
      "deadlineDisplay": "05/01/1900",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234570/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
  ],
  "label": "MOCK_CASETYPE",
  "teamMembers": Array [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack schema 2`] = `
Object {
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "items": Array [
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "1900-01-04",
      "deadlineDisplay": "04/01/1900",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "2200-01-06",
      "deadlineDisplay": "06/01/2200",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 1,
    },
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234570/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {},
      "deadline": "1900-01-05",
      "deadlineDisplay": "05/01/1900",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234570/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": Array [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with DueDate with contributionDueDate 1`] = `
Object {
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "items": Array [
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": Object {
        "DueDate": "2020-12-10",
      },
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "dueContribution": "2020-12-12",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE due 10/12/2020",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": Array [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with a contributionDueDate 1`] = `
Object {
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "items": Array [
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "dueContribution": "2020-12-12",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": Array [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with at MPAM_DRAFT_REQUESTED_CONTRIBUTION with contributionStatus 1`] = `
Object {
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "items": Array [
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "dueContribution": "2020-12-12",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_DRAFT_REQUESTED_CONTRIBUTION",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE due: 12/12/2020",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": Array [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with at MPAM_DRAFT_REQUESTED_CONTRIBUTION with contributionStatus and contributionStatus 1`] = `
Object {
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "items": Array [
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_DRAFT_REQUESTED_CONTRIBUTION",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": Array [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with at MPAM_TRIAGE with contributionStatus 1`] = `
Object {
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "items": Array [
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_TRIAGE",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE (Contributions Received)",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": Array [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with at MPAM_TRIAGE_REQUESTED_CONTRIBUTION with contributionDueDate 1`] = `
Object {
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "items": Array [
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "dueContribution": "2020-12-12",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_TRIAGE_REQUESTED_CONTRIBUTION",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE due: 12/12/2020",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": Array [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with at MPAM_TRIAGE_REQUESTED_CONTRIBUTION with contributionStatus and contributionStatus 1`] = `
Object {
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "items": Array [
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_TRIAGE_REQUESTED_CONTRIBUTION",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": Array [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with no contributeDueDate and stage type not matching contributionReceivedStages 1`] = `
Object {
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "items": Array [
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": Array [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with no contributeDueDate but stage type matching contributionReceivedStages 1`] = `
Object {
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": Array [],
  "items": Array [
    Object {
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": Object {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": Object {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_TRIAGE",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE (Contributions Received)",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": Array [],
}
`;
